crates/rspack_error/tests/out_of_order/multi_json_syntax_error/fixtures__multi_json_syntax_error.snap
---
source: crates/rspack_error/tests/fixtures.rs
assertion_line: 63
expression: multi_json_syntax_error
---
error: Json parsing error
  ┌─ tests/out_of_order/multi_json_syntax_error/a.json:3:1
  │
3 │ }
  │ ^ Unexpected character }

error: Json parsing error
  ┌─ tests/out_of_order/multi_json_syntax_error/b.json:1:8
  │
1 │ "我的你的\"
  │            ^ Unexpected end of JSON


